test/sema/var_decl.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn foo(): unit {}
fn bar(): number { return 1.0; }

fn main(): unit {
    mut x: unit;

    // CHECK: [[# @LINE + 1 ]]:13: error: failed to resolve type 'customType'
    mut x2: customType;
    
    // CHECK: [[# @LINE + 1 ]]:25: error: an expression of type 'unit' cannot be used to initialize a variable of type 'number'
    let x3: number = foo();

    let x4: number;
    
    let x5: number = bar();

    // CHECK: [[# @LINE + 1 ]]:22: error: symbol 'y' not found
    let x6: number = y;
}
